--- a/FiLink/FiLink.csproj
+++ b/FiLink/FiLink.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
         <Nullable>enable</Nullable>
+        <ApplicationIcon>FiLinkIco.ico</ApplicationIcon>
     </PropertyGroup>
     <ItemGroup>
         <Folder Include="Models\" />
